--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -142,7 +142,7 @@
 		<!-- /Rendered Table -->
 
 		<!-- Render victim queue -->
-			<div class="col-xs-offset-1 col-xs-10">
+			<div class="col-xs-offset-1 col-xs-10" ng-show="showSolve">
 				<div class="page-header section-header">
 					<h4>Victims' Queue</h4>
 	      </div>
@@ -159,17 +159,6 @@
 				</div>
 			</div>
 		<!-- /Render victim queue -->
-
-		<!-- general info panel -->
-		<div class="col-xs-offset-1 col-xs-10">
-			<div class="page-header section-header">
-				<h4>General Info Panel</h4>
-			</div>
-			<div class="panel panel-default panel-body grey-color">
-					General content
-			</div>
-		</div>
-		<!-- /general info panel -->
 
 		<!-- legend panel -->
 			<div class="col-xs-offset-1 col-xs-10">
