working on resolution, fixed some errors

--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -58,7 +58,7 @@
 							ng-class="frameClassFor(p.frames[n], p)" contenteditable="true" strip-br="true"
 							ng-model="inputMatrix[$index][n]" ng-change="changeFrame(n,$index)">
 								<!-- {{(p.frames[n].reservedForPageBuffering || p.frames[n].finished) ? '' : (p.frames[n].process + p.frames[n].pageNumber)}} -->
-								{{ inputMatrix[n][$index] }}
+								{{ inputMatrix[$index][n] }}
 							</td>
 						</tr>
 						<!-- render page faults -->
