--- a/templates/partials/options.popup.html
+++ b/templates/partials/options.popup.html
@@ -44,7 +44,7 @@
               Reserved for Page Buffering
             </label>
           </div>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+          <button type="button" class="btn btn-block btn-info" data-dismiss="modal">CLOSE</button>
         </form>
       </div>
     </div><!-- /.modal-content -->
